--- a/assets/css/layout/footer.scss
+++ b/assets/css/layout/footer.scss
@@ -6,6 +6,7 @@
   left: 0;
   margin-left: 0;
   width: 105vw;
+  overflow-y: scroll;
 
   ul{
     text-decoration: none;
